--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/MLDOliveira/cursoDevNodeJSUdemy#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "consign": "^0.1.6",
     "ejs": "^2.5.8",
     "express": "^4.16.3",
     "mysql": "github:mysqljs/mysql"
