--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "consign": "^0.1.6",
     "ejs": "^2.5.8",
     "express": "^4.16.3",
+    "express-validator": "^5.1.2",
     "mysql": "github:mysqljs/mysql"
   }
 }
